--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,6 @@ sortedcontainers==2.4.0
 trio==0.23.1
 trio-websocket==0.11.1
 urllib3==2.0.7
+watchdog==4.0.0
 webdriver-manager==4.0.1
 wsproto==1.2.0
